5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4128/executions/1638_869.log
== SUBMITION (2019-04-09 11:14:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = int(input("valor: "))

if(preco >= 200):
	desc = preco -(preco/5%) 
	print(desc)
else:
	print(preco)

-- EXECUTION TIME:
0.162553
-- ERROR:
  File "/home/codebench/codes/1638/869/main.py", line 7
    desc = preco -(preco/5%) 
                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:15:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = float(input("valor: "))

if(preco >= 200):
	desc = preco -(preco/5%) 
	print(round(desc,2))
else:
	print(round(preco,2))

-- EXECUTION TIME:
0.151753
-- ERROR:
  File "/home/codebench/codes/1638/869/main.py", line 7
    desc = preco -(preco/5%) 
                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:16:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = float(input("valor: "))

if(preco >= 200):
	desc = preco - (preco/5%) 
	print(round(desc,2))
else:
	print(round(preco,2))

-- ERROR:
File "XXXX", line 7
    desc = preco - (preco/5%) 
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:16:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = float(input("valor: "))

if(preco >= 200):
	desc = preco - (5%) 
	print(round(desc,2))
else:
	print(round(preco,2))

-- ERROR:
File "XXXX", line 7
    desc = preco - (5%) 
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:17:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = float(input("valor: "))

if(preco >= 200):
	desc = preco /(5%) 
	print(round(desc,2))
else:
	print(round(preco,2))

-- ERROR:
File "XXXX", line 7
    desc = preco /(5%) 
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:17:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = float(input("valor: "))

if(preco >= 200):
	desc = preco 
	print(round(desc,2))
else:
	print(round(preco,2))

-- OUTPUT:
200.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:17:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = float(input("valor: "))

if(preco >= 200):
	desc = preco 
	print(round(desc,2))
else:
	print(round(preco,2))

-- OUTPUT:
200.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:19:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = float(input("valor: "))

if(preco >= 200):
	desc = preco/5%
	print(round(desc,2))
else:
	print(round(preco,2))

-- ERROR:
File "XXXX", line 7
    desc = preco/5%
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:19:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = float(input("valor: "))

if(preco >= 200):
	desc = preco - (preco * 5%)
	print(round(desc,2))
else:
	print(round(preco,2))

-- ERROR:
File "XXXX", line 7
    desc = preco - (preco * 5%)
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:21:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = float(input("valor: "))

if(preco >= 200):
	desc = preco - 5%
	print(round(desc,2))
else:
	print(round(preco,2))

-- ERROR:
File "XXXX", line 7
    desc = preco - 5%
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:22:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = float(input("valor: "))

if(preco >= 200):
	desc = preco * 100/5%
	print(round(desc,2))
else:
	print(round(preco,2))

-- ERROR:
File "XXXX", line 7
    desc = preco * 100/5%
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:22:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = float(input("valor: "))

if(preco >= 200):
	desc = preco * 100/5
	print(round(desc,2))
else:
	print(round(preco,2))

-- OUTPUT:
4001.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:26:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = float(input("valor: "))

if(preco >= 200):
	desc = (preco * 5) /100
	print(round(desc,2))
else:
	print(round(preco,2))

-- EXECUTION TIME:
0.21094
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
10.0
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
10.03
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:26:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = float(input("valor: "))

if(preco >= 200):
	desc = (preco * 5) /100
	print(round(desc,2))
else:
	print(round(preco,2))

-- OUTPUT:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:27:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = float(input("valor: "))

if(preco >= 200):
	desc = (preco * 5) /100
	desc1 = preco - desc
	print(round(desc,2))
else:
	print(round(preco,2))

-- OUTPUT:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:27:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = float(input("valor: "))

if(preco >= 200):
	desc = (preco * 5) /100
	desc1 = preco - desc
	print(round(desc1,2))
else:
	print(round(preco,2))

-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:27:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = float(input("valor: "))

if(preco >= 200):
	desc = (preco * 5) /100
	desc1 = preco - desc
	print(round(desc1,2))
else:
	print(round(preco,2))

-- EXECUTION TIME:
0.113381
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
